--- a/layers/common/package.json
+++ b/layers/common/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.700.0",
-    "@aws-sdk/lib-dynamodb": "^3.700.0"
+    "@aws-sdk/lib-dynamodb": "^3.700.0",
+    "@aws-sdk/client-s3": "^3.700.0"
   },
   "devDependencies": {
     "typescript": "^5.7.2"
