--- a/layers/common/package.json
+++ b/layers/common/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.700.0",
     "@aws-sdk/lib-dynamodb": "^3.700.0",
-    "@aws-sdk/client-s3": "^3.700.0"
+    "@aws-sdk/client-s3": "^3.700.0",
+    "busboy": "^1.6.0"
   },
   "devDependencies": {
+    "@types/busboy": "^1.5.4",
     "typescript": "^5.7.2"
   },
   "engines": {
