--- a/layers/common/package.json
+++ b/layers/common/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.700.0",
-    "@aws-sdk/lib-dynamodb": "^3.700.0",
     "@aws-sdk/client-s3": "^3.700.0",
-    "busboy": "^1.6.0"
+    "@aws-sdk/lib-dynamodb": "^3.700.0",
+    "busboy": "^1.6.0",
+    "csv-parse": "^6.1.0"
   },
   "devDependencies": {
     "@types/busboy": "^1.5.4",
+    "@types/node": "^25.2.2",
     "typescript": "^5.7.2"
   },
   "engines": {
