overide profile, since profile is declare in toml explicitly

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,4 +67,5 @@ jobs:
             --no-confirm-changeset \
             --no-fail-on-empty-changeset \
             --capabilities CAPABILITY_IAM \
-            --region $AWS_REGION
+            --region $AWS_REGION \
+            --profile ""
