fix: update SAM deploy stack name to `aws-sam-poc`

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,7 +63,7 @@ jobs:
         if: github.ref == 'refs/heads/main'
         run: |
           sam deploy \
-            --stack-name aws-sam-poc-dev \
+            --stack-name aws-sam-poc \
             --no-confirm-changeset \
             --no-fail-on-empty-changeset \
             --capabilities CAPABILITY_IAM \
